syntax = "proto3";
package pessoa;

import "google/protobuf/timestamp.proto";


//Objeto Endereço
message Endereco {

    int64 id =  1;

    int64 cep =  2;

    string logradouro = 3;

    string complemento = 4;

    string bairro = 5;

    string cidade = 6;

    string uf = 7;

}


// Objeto Telefone 
message Telefone {
    
    int64 id =  1;
    
    enum TelefoneTipo {
        CELULAR = 0;
        CASA = 1;
        TRABALHO = 2;
      }

    string dd = 2;

    string numero = 3;

    TelefoneTipo tipo = 4;

    google.protobuf.Timestamp reminder = 5;
}

// objeto identificador
message Identificador {
    int64 cpf = 1;

    int64 rg = 2;

    google.protobuf.Timestamp reminder = 4;
}



// Objeto Pessoa
message Pessoa {

    int64 id = 1;

    string nome = 2;

    google.protobuf.Timestamp dtNascimento = 3;
    
    repeated Identificador identificador =  4;

    string email = 5;

    repeated Telefone telefone = 6;
    
    repeated Endereco endereco = 7;

    google.protobuf.Timestamp reminder = 8;

}


// Requisicao para criar uma nova pessoa
message CrearPessoaRequest{
    string api = 1;
    Pessoa pessoa = 2;
}

// Resposta com ID da pessoa Criada
message CrearPessoaResponse{
    string api = 1;
    int64 id = 2;
}


// serviço de pessoa RPC
service PessoaService {
    // Cria uma nova pessoa
    rpc criar (CrearPessoaRequest) returns (CrearPessoaResponse);
}



// Requisito para criar uma nova pessoa
message CriarEnderecoRequest{
    string api = 1;
    Endereco endereco = 2;
}

// Resposta com ID da pessoa Criada
message CriarEnderecoResponse{
    string api = 1;
    int64 id = 2;
}


// serviço de endereco RPC
service EnderecoService {
    // Cria uma nova pessoa
    rpc criar (CriarEnderecoRequest) returns (CriarEnderecoResponse);
}
