syntax = "proto3";
package pessoa;

import "google/protobuf/timestamp.proto";
import public "endereco-service.proto";

enum TelefoneTipo {
    CELULAR = 0;
    CASA = 1;
    TRABALHO = 2;
}

// Objeto Telefone
message Telefone {

    int64 id = 1;

    string dd = 2;

    string numero = 3;

    TelefoneTipo tipo = 4;

}

// objeto identificador
message Identificador {
    int64 cpf = 1;

    int64 rg = 2;
}

// Objeto Pessoa
message Pessoa {

    int64 id = 1;

    string nome = 2;

    google.protobuf.Timestamp dtNascimento = 3;

    repeated Identificador identificador = 4;

    string email = 5;

    repeated Telefone telefone = 6;

    repeated Endereco endereco = 7;

    google.protobuf.Timestamp reminder = 8;

}

// Requisicao para criar uma nova pessoa
message CriarPessoaRequest {
    string api = 1;
    Pessoa pessoa = 2;
}

// Resposta com ID da pessoa Criada
message CriarPessoaResponse {
    string api = 1;
    int64 id = 2;
}

//CriarIdentificadorResponse cria um identificador para a pessoa response
message CriarIdentificadorResponse {
    string api = 1;
    int64 cpf = 2;
}

//CriarIdentificadorRequest cria um identificador para a pessoa request
message CriarIdentificadorRequest {
    Identificador identificador = 1;
    string api = 2;
}

//CriarTelefoneResponse cria um telefone para a pessoa response
message CriarTelefoneResponse {
    string api = 1;
    int64 id = 2;
}

//CriarTelefoneRequest cria um telefone para a pessoa request
message CriarTelefoneRequest {
    Telefone telefone = 1;
    string api = 2;
}

// servi√ßo de pessoa RPC
service PessoaService {
    // Cria uma nova pessoa
    rpc criar (CriarPessoaRequest) returns (CriarPessoaResponse);
    //cria o identificador da pessoa
    rpc CriarIdentificador (CriarIdentificadorRequest) returns (CriarIdentificadorResponse);
    // cria o telefone da pessoa
    rpc CriarTelefone (CriarTelefoneRequest) returns (CriarTelefoneResponse);
}
